update client firstname + lastname
